# src/infra/http/controllers/workspace-controller.ts
@@ -2,7 +2,11 @@ import { SpanStatusCode, trace } from '@opentelemetry/api'
 import type { FastifyReply, FastifyRequest } from 'fastify'
 import { DomainError } from '@/domain/errors/domain-error'
 import { createWorkspace } from '@/domain/services/workspace/create-workspace-service'
-import { createWorkspaceBodySchemaRequest } from '../schemas/workspaces-schema'
+import { getWorkspace } from '@/domain/services/workspace/get-workspace-service'
+import {
+  createWorkspaceBodySchemaRequest,
+  getWorkspaceQuerySchemaRequest,
+} from '../schemas/workspaces-schema'
 
 export async function createWorkspaceController(
   request: FastifyRequest,
@@ -39,5 +43,39 @@ export async function createWorkspaceController(
     span.end()
 
     return reply.status(201).send({ workspace })
+  })
+}
+
+export async function getWorkspaceController(
+  request: FastifyRequest,
+  reply: FastifyReply
+) {
+  const tracer = trace.getTracer('get-workspace')
+
+  return tracer.startActiveSpan('get-workspace-controller', async span => {
+    const { platformId, platform } = getWorkspaceQuerySchemaRequest.parse(
+      request.query
+    )
+
+    const workspace = await getWorkspace(platformId, platform)
+
+    if (workspace instanceof DomainError) {
+      span.setStatus({
+        code: SpanStatusCode.ERROR,
+        message: workspace.message,
+      })
+      span.end()
+      return reply.status(workspace.status).send({
+        message: workspace.message,
+      })
+    }
+
+    span.setStatus({
+      code: SpanStatusCode.OK,
+      message: 'Workspace found successfully',
+    })
+    span.end()
+
+    return reply.status(200).send({ workspace })
   })
 }
