# src/infra/http/routes/workspaces-routes.ts
@@ -1,9 +1,14 @@
 import type { FastifyInstance } from 'fastify'
 import type { ZodTypeProvider } from 'fastify-type-provider-zod'
-import { createWorkspaceController } from '../controllers/workspace-controller'
+import {
+  createWorkspaceController,
+  getWorkspaceController,
+} from '../controllers/workspace-controller'
 import {
   createWorkspaceBodySchemaRequest,
   createWorkspaceBodySchemaResponse,
+  getWorkspaceQuerySchemaRequest,
+  getWorkspaceQuerySchemaResponse,
 } from '../schemas/workspaces-schema'
 import { apiKeyAuth } from '@/infra/http/middlewares/api-key-auth'
 
@@ -19,5 +24,18 @@ export async function workspaceRoutes(app: FastifyInstance) {
       body: createWorkspaceBodySchemaRequest,
     },
     handler: createWorkspaceController,
+  })
+
+  app.withTypeProvider<ZodTypeProvider>().route({
+    method: 'GET',
+    url: '/workspaces',
+    onRequest: [apiKeyAuth],
+    schema: {
+      description: 'Get a workspace by platform ID',
+      tags: ['workspaces'],
+      response: getWorkspaceQuerySchemaResponse,
+      query: getWorkspaceQuerySchemaRequest,
+    },
+    handler: getWorkspaceController,
   })
 }
